# TransportNSWv2

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml.old
TransportNSW/: TransportNSWv2.py
TransportNSWv2/: TransportNSWv2.py  __init__.py
TransportNSWv2/gtfs_extensions/: tfnsw_gtfs_extensions.py
