[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytransportnswv2"
dynamic = ["version"]
description = "Get detailed per-trip transport information from TransportNSW"
readme = "README.md"
license = "MIT"
authors = [
    { name = "andystewart999", email = "andy.stewart@live.com" },
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests",
    "protobuf"
]

[project.urls]
Homepage = "https://github.com/andystewart999/TransportNSWv2"

[tool.hatch.version]
path = "TransportNSWv2/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/TransportNSWv2",
]
exclude = [
    "*.old"
]

[tool.hatch.build.targets.wheel]
include = [
    "/TransportNSWv2",
]
exclude = [
    "*.old"
]
